impressed / what is Schwenkung / Schwenker Lightbox titles

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                 <li data-rel="#portfolio">
                     <span class="nav-label">Our Schwenks</span>
                 </li>
-                <li data-rel="#testimonial">
-                    <span class="nav-label">Testimonial</span>
+                <li data-rel="#whatis">
+                    <span class="nav-label">What is Schwenking?</span>
                 </li>
                 <li data-rel="#map">
-                    <span class="nav-label">Where?</span>
+                    <span class="nav-label">Where did we schwenk?</span>
                 </li>
                 <li>
                     <a href="schwenker.html" style="color:#fff"><span class="nav-label">Get a Schwenker</span></a>
@@ -121,9 +121,8 @@
                         <div class="carousel-caption">
                             <img src="img/logoSchwenk.png" />
                             <h1 class="light margin-bottom-medium mat-none"><font face="Campton Bold, sans-serif"><b>Schwenk The World</b></font></h1>
-                            <p class="light margin-bottom-medium">Schwenken is the Culture of a small country in the heart of Europe called <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank" style="color:#fff">Saarland</a>.
-It is more than just a way of doing BBQ. It is a way of life!<br />
-    Help Us to Spread Schwenking all over the world.</p>
+                            <p class="light margin-bottom-medium">
+                                The mission of SchwenkTheWorld is to spread the Saarländish culture called <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank" style="color:#fff">“Schwenking”</a> all over the world. We want many people from many different countries to start schwenking.<br />In the end we want to SchwenkTheWorld :)</p>
                             <div class="call-button">
                                 <div class="row">
                                     <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-2 col-md-offset-2">
@@ -132,7 +131,7 @@ It is more than just a way of doing BBQ. It is a way of life!<br />
     ============================== -->
                                         <section id="send-message">
                                             <a class="button pull-right internal-link bold-text light hvr-grow" data-gsc-widget="145026">
-    Become a SchwenkTheWorld ambassador</a>
+    Become an ambassador</a>
                                         </section>                                         
                                         <!-- *** end Send Message *** -->
                                     </div>
@@ -167,17 +166,13 @@ It is more than just a way of doing BBQ. It is a way of life!<br />
         </header>         
         <!-- *** end Header *** -->
         <!-- =========================
-       Call to action
-    ============================== -->         
-        <!-- *** end call-to-action *** -->
-        <!-- =========================
        Portfolio
     ============================== -->
         <section id="portfolio" class="portfolio padding-large text-center" data-pgc-define="porto" data-pgc-edit="porto">
             <div class="container margin-bottom-medium">
                 <div class="row margin-bottom-medium wow fadeInUp">
                     <h2>
-                    Our<strong class="main-color bold-text">Schwenks</strong></h2>
+                    Our <strong class="main-color bold-text">Schwenks</strong></h2>
                     <div class="line main-bg"></div>
                     <div class="col-md-10 col-md-offset-1">
                         <div class="subtitle">Check out some of our greatest Schwenks.</div>
@@ -213,7 +208,7 @@ See here some examples of our glorious missions.</p>
             </div>             
             <!-- *** end container *** -->
             <!-- *****  Portfolio  wrapper ***** -->
-            <div class="portfolio-wrapper margin-bottom-medium" data-pgc-edit>
+            <div class="portfolio-wrapper" data-pgc-edit>
                 <!-- =========================
                Portfolio item
             ============================== -->
@@ -366,6 +361,24 @@ See here some examples of our glorious missions.</p>
             </div>             
             <!-- *** end  portfolio-wrapper *** -->
         </section><!-- *** end Portfolio *** -->
+        
+        <!-- =========================
+       what is schwenking ?
+    ============================== -->
+        <section id="whatis" class="portfolio text-center">
+            <div class="container margin-bottom-large">
+                <div class="row wow fadeInUp">
+                    <h2>
+                    What is <strong class="main-color bold-text">Schwenking</strong></h2>
+                    <div class="line main-bg"></div>
+                    <div class="col-md-10 col-md-offset-1">
+                        <div class="subtitle">It is more than just a way of doing BBQ. It is a way of life!</div>
+                        <span class="blacktext">Schwenken is the Culture of a small country in the heart of Europe called <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank">Saarland</a>. It is the very local way of doing BBQ. It is  almost insulting to ask a Saarländer, if he "grills". A Saarländer would answer, NO, I "schwenk".</span><br/><br/><span class="what-to-vid">If you want to see it, check out this great <a href="https://www.youtube.com/watch?v=uh2QDRBzw1I">video &#128279;</a> to see how a Saarländer schwenks at home.</span>
+                    </div>
+                </div> 
+            </div>
+        </section>
+        <!-- *** end what is schwenking ? *** -->
         
         <!-- =========================
        Testimonial
@@ -570,8 +583,7 @@ See here some examples of our glorious missions.</p>
                         <!-- =========================
                        Social icons
                     ============================== -->
-                        <p class="copyright">
-                        © Copyright 2017 SchwenkTheWorld - All Rights reserved</p>
+                        <p class="copyright">© 2017 Schwenk The World | All rights reserved | <a href="impressum.html">IMPRESSUM</a></p>
                     </div>
                 </div>
             </div>
