--- a/schwenker.html
+++ b/schwenker.html
@@ -99,29 +99,29 @@
         <section id="call-to-action" class="call-to-action">
             <div class="row">
                 <div class="col-md-2 col-md-offset-1">
-                    <a href="img/schwenker/schwenker1.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                    <a href="img/schwenker/schwenker1.jpg" class="thumbnail" title="Molded head" data-lightbox-gallery="schwenker" data-lightbox-gallery="portfolio">
                         <img src="img/schwenker/schwenker1.jpg">
                     </a>
-                    <a href="img/schwenker/schwenker2.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                    <a href="img/schwenker/schwenker2.jpg" class="thumbnail" title="height adjustment" data-lightbox-gallery="schwenker" data-lightbox-gallery="portfolio">
                         <img src="img/schwenker/schwenker2.jpg">
                     </a>
-                    <a href="img/schwenker/schwenker5.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                    <a href="img/schwenker/schwenker5.jpg" class="thumbnail" title="height adjustment in action" data-lightbox-gallery="schwenker" data-lightbox-gallery="portfolio">
                         <img src="img/schwenker/schwenker5.jpg">
                     </a>
                 </div>
                 <div class="col-md-6">
-                    <a href="img/schwenker/schwenker4.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                    <a href="img/schwenker/schwenker4.jpg" class="thumbnail" title="The Schwenker" data-lightbox-gallery="schwenker" data-lightbox-gallery="portfolio">
                         <img src="img/schwenker/schwenker4.jpg">
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a href="img/schwenker/schwenker3.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                    <a href="img/schwenker/schwenker3.jpg" class="thumbnail" title="" data-lightbox-gallery="schwenker" data-lightbox-gallery="portfolio">
                         <img src="img/schwenker/schwenker3.jpg">
                     </a>
-                    <a href="img/schwenker/schwenker8.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                    <a href="img/schwenker/schwenker8.jpg" class="thumbnail" title="The Schwenker in parts" data-lightbox-gallery="schwenker" data-lightbox-gallery="schwenker">
                         <img src="img/schwenker/schwenker8.jpg">
                     </a>
-                    <a href="img/schwenker/schwenker7.jpg" class="thumbnail" title="Not everybody liked that we schwenked Tokyo" data-lightbox-gallery="tokyo" data-lightbox-gallery="portfolio">
+                    <a href="img/schwenker/schwenker7.jpg" class="thumbnail" title="The grill" data-lightbox-gallery="schwenker" data-lightbox-gallery="schwenker">
                         <img src="img/schwenker/schwenker7.jpg">
                     </a>
                 </div>
@@ -402,8 +402,7 @@
                         <!-- =========================
                        Social icons
                     ============================== -->
-                        <p class="copyright">
-                        © Copyright 2017 SchwenkTheWorld - All Rights reserved</p>
+                        <p class="copyright">© 2017 Schwenk The World | All rights reserved | <a href="impressum.html">IMPRESSUM</a></p>
                     </div>
                 </div>
             </div>
