Schwenker text / stock alert

--- a/schwenker.html
+++ b/schwenker.html
@@ -159,8 +159,7 @@
                     <div class="col-md-6">
                         <div class="service wow fadeInUp text-left">
                             <h4>The original Schwenker</h4>
-                            <p class="blacktext">You will get a Schwenker which is produced in Saarland. The legs are made with aluminium to garantie a light weight. So that you can use it in your garden and you can take it 
-                                for camping<br />The grill is made with rust free steal, so that you can leave the Schwenker outside without worrying.<br />The Schwenker will be delivered with our ultimate guide, so that you can directly start your carreer as a real Schwenk ambassador.</p>
+                            <p class="blacktext">You will get our SchwenkTheWorld Schwenker which is produced in Saarland, Germany. You can use it above a fireplace in your garden and you can take it on your next camping trip. Each leg can be dismantled into three pieces and they are made of aluminium in order to make them light and handy. The grill is made with rust free steal, so that you can leave the Schwenker outside without worrying.<br />The Schwenker will be delivered with our ultimate guide, so that you can directly start your carreer as a real SchwenkTheWorld ambassador.</p>
                             <p class="blacktext"><b>Features:</b><br /></p>
                             <ul class="schwenkfeatures">
                                 <li>Made in Saarland</li>
@@ -211,7 +210,6 @@
                     </div>
                     <div class="text-right col-md-4">
                         <h1><strong>149 $</strong></h1>
-                        <br>
                         <!-- =========================
        Send Message
     ============================== -->                         
@@ -242,6 +240,13 @@
                     <!-- *****  Service Single ***** -->
                     <!-- *****  Service Single ***** -->
                     <div class="clearfix"></div>
+                </div>
+                <div class="row text-center">
+                    <div class="col-md-offset-4 col-md-5">
+                        <div class="alert alert-danger text-center" role="alert">
+                            <strong>Oh snap!</strong> Only 9 left on stock.
+                        </div>
+                    </div>
                 </div>
             </div>             
             <br />
