--- a/schwenker.html
+++ b/schwenker.html
@@ -208,14 +208,17 @@
     ============================== -->                         
                         <!-- ***** end send message *** -->                         
                     </div>
-                    <div class="text-right col-md-4">
+                    <div class="text-right col-md-4 price">
+                        <h3>199 $</h3>
                         <h1><strong>149 $</strong></h1>
+                        <br/>
                         <!-- =========================
        Send Message
     ============================== -->                         
                         <!-- ***** end send message *** -->                         
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-3">
+                        <h3 class="limited">Limited time offer!</h3>
                         <!-- =========================
        Send Message
     ============================== -->
