--- a/schwenker.html
+++ b/schwenker.html
@@ -147,13 +147,19 @@
                             <div class="icon">
                                 <img class="myicon" src="img/icons/height.jpg">
                             </div>
-                            <h4>5,2 ft</h4>
+                            <h4>5,2 ft height</h4>
                         </div>
                         <div class="slideInLeft">
                             <div class="icon">
                                 <img class="myicon" src="img/icons/weight.jpg">
                             </div>
                             <h4>Only 10 pounds</h4>
+                        </div>
+                        <div class="slideInLeft">
+                            <div class="icon">
+                                <img class="myicon" src="img/icons/safepay.png">
+                            </div>
+                            <h4>Secure payment with Paypal</h4>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -174,6 +180,12 @@
                         </div>
                     </div>
                     <div class="col-md-2">
+                        <div class="slideInLeft">
+                            <div class="icon">
+                                <img class="myicon" src="img/icons/rust.png">
+                            </div>
+                            <h4>100% rust free</h4>
+                        </div>
                         <div>
                             <div class="icon">
                                 <img class="myicon" src="img/icons/calc.jpg">
@@ -209,6 +221,8 @@
                         <!-- ***** end send message *** -->                         
                     </div>
                     <div class="text-right col-md-4 price">
+                        
+                    <h5 class="limited">Limited time offer!</h5>
                         <h3>199 $</h3>
                         <h1><strong>149 $</strong></h1>
                         <br/>
@@ -218,7 +232,6 @@
                         <!-- ***** end send message *** -->                         
                     </div>
                     <div class="col-md-3">
-                        <h3 class="limited">Limited time offer!</h3>
                         <!-- =========================
        Send Message
     ============================== -->
