--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ See here some examples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item asia">
                     <div class="portfolio">
-                        <a href="img/Projekts/israel/Schwenk4_RomainAlary.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/israel/Schwenk4_RomainAlary.jpg" data-lightbox-gallery="israel">
                             <img src="img/Projekts/israel/Schwenk4_RomainAlary.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -345,7 +345,7 @@ See here some examples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item america">
                     <div class="portfolio">
-                        <a href="https://vimeo.com/57740437" data-lightbox-gallery="portfolio">
+                        <a href="https://vimeo.com/57740437" data-lightbox-gallery="lapaz">
                             <img src="img/Projekts/lapaz.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -372,7 +372,7 @@ See here some examples of our glorious missions.</p>
                     What is <strong class="main-color bold-text">Schwenking</strong></h2>
                     <div class="line main-bg"></div>
                     <div class="col-md-10 col-md-offset-1">
-                        <div class="subtitle">It is more than just a way of doing BBQ. It is a way of life!</div>
+                        <div class="subtitle">It is more than just a way of doing BBQ. It is a way of life!</div><br/>
                         <span class="blacktext">Schwenken is the Culture of a small country in the heart of Europe called <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank">Saarland</a>. It is the very local way of doing BBQ. It is  almost insulting to ask a Saarländer, if he "grills". A Saarländer would answer, NO, I "schwenk".</span><br/><br/><span class="what-to-vid">If you want to see it, check out this great <a href="https://www.youtube.com/watch?v=uh2QDRBzw1I">video &#128279;</a> to see how a Saarländer schwenks at home.</span>
                     </div>
                 </div> 
