--- a/schwenker.html
+++ b/schwenker.html
@@ -165,17 +165,16 @@
                     <div class="col-md-6">
                         <div class="service wow fadeInUp text-left">
                             <h4>The original Schwenker</h4>
-                            <p class="blacktext">You will get our original SchwenkTheWorld Schwenker which is produced in Saarland, Germany. You can use it above a fireplace in your garden and you can take it on your next camping trip. Each leg can be dismantled into three pieces and they are made of aluminium in order to make them light and handy. The grill is made with rust free steal, so that you can leave the Schwenker outside without worrying.<br />The Schwenker will be delivered with our ultimate guide, so that you can directly start your carreer as a real SchwenkTheWorld ambassador.</p>
+                            <p class="blacktext">You will get our original SchwenkTheWorld Schwenker which is produced in Saarland, Germany. You can use it above a fireplace in your garden and you can take it on your next camping trip. Each leg can be dismantled into three pieces and they are made of aluminium in order to make them light and handy. The grill is nickel platet, so that you can leave the Schwenker outside.<br />The Schwenker will be delivered with our ultimate guide, so that you can directly start your carreer as a real SchwenkTheWorld ambassador.</p>
                             <p class="blacktext"><b>Features:</b><br /></p>
                             <ul class="schwenkfeatures">
                                 <li>Made in Saarland</li>
                                 <li>Infinitely variable height adjustment</li>
                                 <li>100% original SchwenkTheWorld</li>
                                 <li>Lightweight build</li>
-                                <li>aluminium tripod</li>
+                                <li>100% rust free aluminium tripod</li>
                                 <li>nickel platet grill</li>
                                 <li>Easy set-up without tools</li>
-                                <li>100% rust free </li>
                             </ul>
                         </div>
                     </div>
@@ -184,7 +183,7 @@
                             <div class="icon">
                                 <img class="myicon" src="img/icons/rust.png">
                             </div>
-                            <h4>100% rust free</h4>
+                            <h4>100% rust free tripod</h4>
                         </div>
                         <div>
                             <div class="icon">
