--- a/index.html
+++ b/index.html
@@ -209,6 +209,23 @@ See here some examples of our glorious missions.</p>
             <!-- *** end container *** -->
             <!-- *****  Portfolio  wrapper ***** -->
             <div class="portfolio-wrapper" data-pgc-edit>
+                 <!-- =========================
+               Portfolio item
+            ============================== -->
+                <div class="portfolio-item europe">
+                    <div class="portfolio">
+                        <a href="https://vimeo.com/238954390" data-lightbox-gallery="lent">
+                            <img src="img/Projekts/SchwenkTheLent.jpg" alt="Portfolio 1" />
+                            <!-- END PORTFOLIO IMAGE -->
+                            <div class="portfolio-overlay hvr-rectangle-out">
+                                <h2 class="margin-bottom-small">Schwenk The Lent</h2>
+                                <p>Thanks to Moritz Edel (our chief executive operations manager) and his friends for the great "Schwenk The Lent"</p>
+                            </div>
+                            <!-- END PORTFOLIO OVERLAY -->
+                        </a>
+                    </div>
+                </div>                 
+                <!-- *** end portfolio-item *** -->
                 <!-- =========================
                Portfolio item
             ============================== -->
